# leptos-captcha

./: Cargo.toml  LICENSE  README.md  justfile
css/: leptos-captcha.css
examples/axum-example/: Cargo.toml  README.md
examples/axum-example/src/: app.rs  main.rs
examples/axum-example/style/: main.scss
src/: lib.rs
