[package]
name = "leptos-captcha"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org"]
categories = ["wasm", "web-programming"]
keywords = ["leptos", "wasm", "web"]
description = "Simple Captcha / PoW component for Leptos"
readme = "README.md"
repository = "https://github.com/sebadob/leptos-captcha"

[dependencies]
leptos = "0.6.5"
spow = "0.2.0"
