[package]
name = "leptos-captcha"
version = "0.3.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org"]
categories = ["wasm", "web-programming"]
keywords = ["leptos", "wasm", "web"]
description = "Simple Captcha / PoW component for Leptos"
readme = "README.md"
repository = "https://github.com/sebadob/leptos-captcha"

[dependencies]
leptos = "0.7"
spow = { version = "0.4.0", features = ["server", "client"] }
